attempt to fix form overflow mobile

--- a/src/styles/Form.module.scss
+++ b/src/styles/Form.module.scss
@@ -14,6 +14,7 @@
 		flex-direction: column;
 		justify-content: space-evenly;
 		margin-bottom: 5vh;
+		max-width: 100%;
 
 		.inputContainer {
 			display: flex;
